typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors3.ts.stderr
error: GetterPropWithoutReturn {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            34,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors3.ts:2:15
  |
2 | var v = { get Foo() { } };
  |               ^^^

